--- a/OnlineStore/OnlineStore.csproj
+++ b/OnlineStore/OnlineStore.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CategoryDetailsViewModel.cs" />
+    <Compile Include="ViewModels\SearchViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -259,6 +260,8 @@
     <Content Include="Views\Product\Details.cshtml" />
     <Content Include="Views\Basket\Details.cshtml" />
     <Content Include="Views\Shared\_ProductNameWithImage.cshtml" />
+    <Content Include="Views\Search\Index.cshtml" />
+    <Content Include="Views\Shared\_ProductTable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
